Temporary fix to the Positions footer gap.

--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,8 @@ h3 {
 .EmployeeContainer {
   border: 1px solid black;
   border-spacing: none;
-  /* margin-bottom: 20vh; */
+  /* position: relative; */
+  margin-bottom: 33vh;
 }
 table,
 tr,
